--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/silenciopz_logo"
+        android:icon="@mipmap/silenciopz_logo2"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/silenciopz_logo"
+        android:roundIcon="@mipmap/silenciopz_logo2"
         android:supportsRtl="true"
         android:theme="@style/Theme.SilenciosDrawings"
         tools:targetApi="31">
